# cpp-parallel

./: CMakeLists.txt
src/parallel_executor/: main.cpp
src/parallel_executor/Device/: Device.h  DeviceB.cpp
src/parallel_executor/Device_Event/: DataEvent.cpp  DataEvent.h  Device.h  DeviceA.cpp  DeviceB.cpp  StartedEvent.h  WorkDoneEvent.cpp
src/parallel_executor/Event/: DataEvent.cpp  DeviceEvent.cpp  DeviceEvent.h  Event.h  StartedEvent.cpp  WorkDoneEvent.h
src/parallel_executor/EventQueue/: EventQueue.cpp  EventQueue.h
test/: CMakeLists.txt
